# prompt_injection_detector

./: .gitignore  Cargo.toml  Dockerfile  Makefile  decisions.md  license-mit  readme.md  roadmap.md  rulebook.md  spec.md
module/injection_cli/: Cargo.toml
module/injection_cli/src/: main.rs
module/injection_core/: Cargo.toml  build.rs  readme.md
module/injection_core/src/: classify.rs  lib.rs  model.rs  tokenizer.rs
module/injection_core/src/backend/: burn.rs  mod.rs  ort.rs
module/injection_core/src/burn_impl/: config.rs  inference.rs  mod.rs
module/injection_core/src/burn_impl/data/: batcher.rs  mod.rs  tokenizer.rs
module/injection_core/src/burn_impl/model/: mod.rs  model.rs
module/injection_core/tests/: readme.md  test_burn_backend.rs  test_lazy_init.rs  test_ort_backend.rs
module/injection_server/: Cargo.toml
module/injection_server/src/: main.rs
module/vllm_core/: Cargo.toml
module/vllm_core/src/: error.rs  lib.rs
module/vllm_core/tests/: basic_tests.rs  readme.md
module/vllm_inferencer/: Cargo.toml  readme.md
module/vllm_inferencer/src/: main.rs
module/vllm_server/: Cargo.toml  readme.md
module/vllm_server/src/: main.rs
scripts/: export_model.py
secret/: hf_token.template  readme.md
