[workspace]
resolver = "2"
members = [
  "module/injection_core",
  "module/injection_cli",
  "module/injection_server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"
authors = [
  "Kostiantyn M. <wandalen@obox.systems>",
]
license = "MIT"

[workspace.lints.rust]
rust_2018_idioms = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = "warn"

[workspace.dependencies]
# Internal workspace dependencies
injection_core = { version = "0.1.0", path = "module/injection_core" }

# ML Frameworks
ort = { version = "2.0.0-rc.10", features = ["cuda"] }
burn = { version = "0.19.0", features = ["cuda"] }
burn-ndarray = { version = "0.19.0" }
burn-import = { version = "0.19.0" }

# Array/Tensor libraries
ndarray = { version = "0.16" }

# CUDA support
cudarc = { version = "0.17.6", features = ["nvrtc"] }

# CLI Framework
unilang = "0.35.0"

# Model Loading
hf-hub = "0.4"

# Tokenization
tokenizers = { version = "0.22.1" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error Handling
error_tools = { version = "0.35", features = ["full"] }
anyhow = "1.0.100"

# Utilities
tempfile = "3.10"
which = "8.0.0"
once_cell = "1.19"

# Secrets Management
workspace_tools = "0.5.0"

# HTTP Server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

#[profile.release]
#opt-level = 3
#lto = true
#codegen-units = 1
