[package]
name = "injection_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core prompt injection detection library using ONNX Runtime"
repository = "https://github.com/your-org/prompt_injection_detector"
keywords = ["security", "prompt-injection", "ml", "deberta", "detection"]
categories = ["machine-learning"]

[lints]
workspace = true

[lib]
name = "injection_core"
path = "src/lib.rs"

[features]
default = ["enabled"]
enabled = []
full = [
  "enabled",
  "dep:ort",
  "dep:hf-hub",
  "dep:tokenizers",
  "dep:serde",
  "dep:serde_json",
  "dep:error_tools",
  "dep:workspace_tools",
]

[dependencies]
# ML Framework - ONNX Runtime
ort = { workspace = true, optional = true }

# Model Loading
hf-hub = { workspace = true, optional = true }

# Tokenization
tokenizers = { workspace = true, optional = true }

# Serialization
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# Error Handling
error_tools = { workspace = true, optional = true }

# Secrets Management
workspace_tools = { workspace = true, optional = true }

[dev-dependencies]
# Test utilities (future)
