[package]
name = "vllm_server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP API server for vLLM inference engine"
repository = "https://github.com/your-org/vllm_inferencer"
keywords = ["llm", "inference", "http", "api", "server"]
categories = ["web-programming::http-server"]

[lints]
workspace = true

[[bin]]
name = "vllm_server"
path = "src/main.rs"

[features]
default = ["enabled"]
enabled = []
full = [
  "enabled",
  "vllm_core/full",
  "dep:axum",
  "dep:tokio",
  "dep:tower",
  "dep:tower-http",
  "dep:serde",
  "dep:serde_json",
  "dep:error_tools",
  "dep:tracing",
  "dep:tracing-subscriber",
]

[dependencies]
# Core library
vllm_core = { workspace = true, optional = true }

# HTTP Server
axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }

# Serialization
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# Error Handling
error_tools = { workspace = true, optional = true }

# Logging
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
